--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 27
@@ -18,6 +19,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -32,6 +36,8 @@ dependencies {
 
     def architecture_version = "1.1.0"
     implementation "android.arch.lifecycle:extensions:$architecture_version"
+
+    kapt "com.android.databinding:compiler:$android_gradle_version"
 
     implementation "com.jakewharton.timber:timber:4.6.1"
 
