Rename class name because confusing as platform class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".list.ListActivity"
+            android:name=".list.SampleListActivity"
             >
         </activity>
     </application>
