Add ViewModel which requests constructor parameter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".list.SampleListActivity"
             >
         </activity>
+        <activity
+            android:name=".customviewmodel.CustomActivity"
+            >
+        </activity>
     </application>
 
 </manifest>
