--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,16 @@ dependencies {
     def architecture_version = "1.1.0"
     implementation "android.arch.lifecycle:extensions:$architecture_version"
 
+    def room_version = "1.0.0"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+
     kapt "com.android.databinding:compiler:$android_gradle_version"
 
     implementation "com.jakewharton.timber:timber:4.6.1"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "android.arch.persistence.room:testing:$room_version"
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
