--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,12 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation "android.arch.persistence.room:testing:$room_version"
+    testImplementation "android.arch.core:core-testing:$architecture_version"
 
+
+    androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation "android.arch.persistence.room:testing:$room_version"
+    androidTestImplementation "android.arch.core:core-testing:$architecture_version"
 }
